objects/ASI_CRM_KR_Temp_SIT__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_KR_AccountOwnerChecking__c</fullName>
        <formula>$User.Id  = ASI_CRM_KR_WS_CRM_No__r.Owner.Id</formula>
        <label>AccountOwnerChecking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_Customer_Code__c</fullName>
        <formula>ASI_CRM_KR_WS_CRM_No__r.ASI_KOR_Customer_Code__c</formula>
        <label>Customer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_Customer_Name__c</fullName>
        <formula>ASI_CRM_KR_WS_CRM_No__r.Name</formula>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_End_Stock_Case__c</fullName>
        <label>End Stock(Case)</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_External_ID_Upload__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID(Upload)</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_Item_Group_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Group Code</label>
        <referenceTo>ASI_KOR_Item_Group__c</referenceTo>
        <relationshipLabel>Temp SITs</relationshipLabel>
        <relationshipName>Temp_SITs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_Last_Month_Ending_Stock_Case__c</fullName>
        <label>Last Month Ending Stock(Case)</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_Month__c</fullName>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Jan</fullName>
                </value>
                <value>
                    <fullName>Feb</fullName>
                </value>
                <value>
                    <fullName>Mar</fullName>
                </value>
                <value>
                    <fullName>Apr</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>Jun</fullName>
                </value>
                <value>
                    <fullName>Jul</fullName>
                </value>
                <value>
                    <fullName>Aug</fullName>
                </value>
                <value>
                    <fullName>Sep</fullName>
                </value>
                <value>
                    <fullName>Oct</fullName>
                </value>
                <value>
                    <fullName>Nov</fullName>
                </value>
                <value>
                    <fullName>Dec</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_SIT_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SIT Created?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Editable</fullName>
                </value>
                <value>
                    <fullName>Locked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_Sub_Brand_Code__c</fullName>
        <formula>ASI_CRM_KR_Item_Group_Code__r.ASI_KOR_Sub_Brand__r.ASI_KOR_Sub_Brand_Code__c</formula>
        <label>Sub Brand Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_Sys_Error_Message__c</fullName>
        <label>Sys Error Message</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_Sys_Month__c</fullName>
        <formula>CASE(ASI_CRM_KR_Month__c, &quot;Jan&quot;, &quot;January&quot;, 
&quot;Feb&quot;, &quot;February&quot;,
&quot;Mar&quot;,&quot;March&quot;,
&quot;Apr&quot;,&quot;April&quot;,
&quot;May&quot;,&quot;May&quot;,
&quot;Jun&quot;,&quot;June&quot;,
&quot;Jul&quot;,&quot;July&quot;,
&quot;Aug&quot;,&quot;August&quot;,
&quot;Sep&quot;,&quot;September&quot;,
&quot;Oct&quot;,&quot;October&quot;,
&quot;Nov&quot;,&quot;November&quot;,
&quot;Dec&quot;,&quot;December&quot;,&quot;Null&quot;)</formula>
        <label>Sys Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_WS_CRM_No__c</fullName>
        <label>WS CRM No</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <errorMessage>(WS CRM No): WS CRM No. does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>ASI_KOR_Wholesaler</value>
            </filterItems>
            <filterItems>
                <field>Account.ASI_KOR_Venue_Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Temp SITs</relationshipLabel>
        <relationshipName>Temp_SITs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
                <value>
                    <fullName>2027</fullName>
                </value>
                <value>
                    <fullName>2028</fullName>
                </value>
                <value>
                    <fullName>2029</fullName>
                </value>
                <value>
                    <fullName>2030</fullName>
                </value>
                <value>
                    <fullName>2031</fullName>
                </value>
                <value>
                    <fullName>2032</fullName>
                </value>
                <value>
                    <fullName>2033</fullName>
                </value>
                <value>
                    <fullName>2034</fullName>
                </value>
                <value>
                    <fullName>2035</fullName>
                </value>
                <value>
                    <fullName>2036</fullName>
                </value>
                <value>
                    <fullName>2037</fullName>
                </value>
                <value>
                    <fullName>2038</fullName>
                </value>
                <value>
                    <fullName>2039</fullName>
                </value>
                <value>
                    <fullName>2040</fullName>
                </value>
                <value>
                    <fullName>2041</fullName>
                </value>
                <value>
                    <fullName>2042</fullName>
                </value>
                <value>
                    <fullName>2043</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Temp SIT</label>
    <listViews>
        <fullName>All_CRM_KR_Temp_SIT</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_KR_WS_CRM_No__c</columns>
        <columns>ASI_CRM_KR_Customer_Code__c</columns>
        <columns>ASI_CRM_KR_Customer_Name__c</columns>
        <columns>ASI_CRM_KR_Year__c</columns>
        <columns>ASI_CRM_KR_Month__c</columns>
        <columns>ASI_CRM_KR_Status__c</columns>
        <columns>ASI_CRM_KR_Item_Group_Code__c</columns>
        <columns>ASI_CRM_KR_End_Stock_Case__c</columns>
        <filterScope>Everything</filterScope>
        <label>All KR Temp SIT</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_KOR</roleAndSubordinates>
            <roleAndSubordinates>ASI_KOR_I_T_Admin</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>SIT_{00000000}</displayFormat>
        <label>Temp SIT Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Temp SITs</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_KR_SIT</fullName>
        <active>true</active>
        <label>CRM KR  SIT</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>